ajout des liens des reseaux sociaux

--- a/notre_eglise.html
+++ b/notre_eglise.html
@@ -168,7 +168,10 @@
     <div class="container footer-inner">
       <p>© <span id="year"></span> EOTC Toulouse. Tous droits réservés.</p>
       <!-- No footer nav needed on a single-page site -->
-    </div>
+      <a href="https://www.instagram.com/eotc.st.michael.toulouse"><img src="/img/instagram.png" alt="Page Instagram de l'Eglise"></a>
+      <a href="https://www.tiktok.com/@eotc.toulouse.st.michael"><img src="/img/tiktok.png" alt="Page TikTok de l'Eglise"></a>
+      <a href="http://www.youtube.com/@toulousest.michaeleotc"><img src="/img/youtube.png" alt="Page Youtube de l'Eglise"></a>
+      </div>
   </footer>
 
   <script src="script.js"></script>
