--- a/evenements.html
+++ b/evenements.html
@@ -113,7 +113,12 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> EOTC Toulouse. Tous droits réservés.</p>
+      <p>© <span id="year"> </span> EOTC Toulouse. Tous droits réservés.</p>
+      <div class="footer-socials">
+          <a href="https://www.instagram.com/eotc.st.michael.toulouse"><img src="/img/instagram.png" alt="Page Instagram de l'Eglise" style="height : 24px; width : 24px"></a>
+          <a href="http://www.youtube.com/@toulousest.michaeleotc"><img src="/img/youtube.png" alt="Page Youtube de l'Eglise" style="height : 24px; width : 43px"></a>
+          <a href="https://www.tiktok.com/@eotc.toulouse.st.michael"><img src="/img/tiktok.png" alt="Page TikTok de l'Eglise" style="height : 24px; width : 24px"></a>
+        </div>
     </div>
   </footer>
 
