--- a/evenements.html
+++ b/evenements.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Stylesheets -->
+  <link rel="stylesheet" href="/css/common.css" />
   <link rel="stylesheet" href="/css/evenements.css" />
   
   <!-- Favicon -->
