--- a/notre_eglise.html
+++ b/notre_eglise.html
@@ -26,7 +26,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Church",
-    "name": "EOTC Toulouse – Église orthodoxe éthiopienne à Toulouse",
+    "name": "EEOT Toulouse – Église orthodoxe éthiopienne à Toulouse",
     "url": "",
     "address": {
       "@type": "PostalAddress",
@@ -45,7 +45,7 @@
       <div class="nav-left">
         <!-- Site icon + brand (link to top of page) -->
         <img class="logo-icon" src="/img/eglise_icone.ico" alt="Icône Église" />
-        <a href="#top" class="brand" aria-label="Haut de page">EOTC Toulouse</a>
+        <a href="#top" class="brand" aria-label="Haut de page">EEOT Toulouse</a>
       </div>
       <!-- Centered navigation links -->
       <nav id="nav-menu" class="nav-menu" aria-label="Navigation principale">
@@ -131,7 +131,7 @@
        ===================== -->
   <footer class="footer">
     <div class="container footer-inner">
-      <p>© <span id="year"> </span> EEOT Toulouse. Tous droits réservés.</p>
+      <p>© <span id="year"> </span>  EEOT Toulouse. Tous droits réservés.</p>
       <!-- No footer nav needed on a single-page site -->
         <div class="footer-socials">
           <a href="https://www.instagram.com/eotc.st.michael.toulouse"><img class="icon" src="/img/instagram.png" alt="Page Instagram de l'Eglise"></a>
