--- a/evenements.html
+++ b/evenements.html
@@ -98,7 +98,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container footer-inner">
-      <p>© <span id="year"> </span> EOTC Toulouse. Tous droits réservés.</p>
+      <p>© <span id="year"> </span> EEOT Toulouse. Tous droits réservés.</p>
       <div class="footer-socials">
           <a href="https://www.instagram.com/eotc.st.michael.toulouse"><img class="icon" src="/img/instagram.png" alt="Page Instagram de l'Eglise"></a>
           <a href="http://www.youtube.com/@toulousest.michaeleotc"><img class="icon-youtube" src="/img/youtube.png" alt="Page Youtube de l'Eglise"></a>
